crates/snapshot-tests/tests/snapshots/parser__bad_table_names__multi_empty.snap
---
source: snapshot-tests/tests/parser.rs
expression: error
---
error[MultilineStringKey]: multiline strings are not allowed for key
  ┌─ multi_empty:1:2
  │
1 │ ['''''']
  │  ^^^^^^ multiline keys are not allowed
